...
    <string name="incorrectLogin">Username or password is incorrect</string>
    <string name="passwords_not_match">The password do not match</string>
    <string name="not_select_GM_or_player">Are you a GM and/or a player</string>
    <string name="username_in_use">Username is already in user. Please change your username</string>

    <!-- Submit error messages -->
    <string name="emptyFieldMessage">All the fields with a * should be filled</string>
    <string name="uncheckedCheckboxMessage">You have to choose either Oneshot or Campaign</string>
    <string name="invalidPlayerNumber">Invalid number of players: min must be positive and smaller or equal to max</string>

    <!-- CreateGame Form strings-->
    <string name="diff1">NOOB</string>
    <string name="diff2">Chill</string>
    <string name="diff3">Hard</string>
...
